Added forecast row by html injected by JS and pulled in data except icon

--- a/src/styles.css
+++ b/src/styles.css
@@ -209,7 +209,7 @@ h4 {
   font-size: 85px;
   padding: 10px 0;
 }
-.day-one .day-two .day-three .day-four .day-five .day-six {
+.day {
   text-align: center;
 }
 .message {
