--- a/src/styles.css
+++ b/src/styles.css
@@ -134,6 +134,7 @@ h1 {
 }
 h2 {
   color: #fdb44b;
+  padding-bottom: 5px;
 }
 h4 {
   color: #fdb44b;
@@ -145,6 +146,7 @@ h4 {
   max-width: 800px;
   border: 1px solid #00bbf0;
   border-radius: 10px;
+  box-shadow: 10px 10px 19px -7px rgba(217, 217, 217, 0.6);
 }
 .btn {
   background: #00bbf0;
@@ -157,6 +159,7 @@ h4 {
 .btn:hover {
   background: #02acdb;
   transition: all 150ms ease-in-out;
+  color: #ffffff;
 }
 .city-search {
   padding-bottom: 20px;
@@ -173,19 +176,6 @@ h4 {
 .location-button:hover {
   background: #02acdb;
   transition: all 150ms ease-in-out;
-}
-.temp-units {
-  display: flex;
-  justify-content: right;
-  padding: 20px;
-}
-.temp-units a {
-  text-decoration: none;
-  color: #fdb44b;
-}
-.temp-units a:hover {
-  text-decoration: none;
-  color: #005792;
 }
 .main-temp {
   font-size: 75px;
@@ -216,7 +206,7 @@ h4 {
   padding-top: 30px;
   text-align: center;
   font-size: 13px;
-  color: dimgray;
+  color: dimgrey;
 }
 .form-control {
   border: 1px solid rgb(172, 172, 172);
